--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "css-loader": "^5.1.0",
     "dart-sass": "^1.25.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.2.0",
     "less": "^4.1.1",
     "less-loader": "^8.0.0",
